Divided Code into packages, Removes redundant typecasts and fixed lint warnings

--- a/app/src/main/res/layout/activity_end_over.xml
+++ b/app/src/main/res/layout/activity_end_over.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.cricket.EndOverActivity">
+    tools:context="com.example.android.cricket.ui.EndOverActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
