--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -5,6 +5,6 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.cricket.ScoreActivity"
+    tools:context="com.example.android.cricket.ui.ScoreActivity"
     android:background="#000000"
     android:drawSelectorOnTop="true" />
