--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.android.cricket.MainActivity">
+    tools:context="com.example.android.cricket.ui.MainActivity">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
